# do-next

./: Cargo.toml  LICENSE-APACHE  LICENSE-MIT  PRIVACY.md  README.md  flake.nix  justfile
src/: events.rs  main.rs
src/config/: credentials.rs  hidden.rs  mod.rs  types.rs  updates.rs
src/jira/: adf.rs  auth.rs  client.rs  mod.rs  oauth.rs  types.rs
src/sources/: fetcher.rs  mod.rs
src/subcommands/: comment.rs  fields.rs  migrate.rs  mod.rs
src/tui/: app.rs  detail.rs  hint_bar.rs  list.rs  markdown.rs  mod.rs  onboarding.rs  render.rs
src/tui/overlays/: await_spinner.rs  comment_delete_confirm.rs  comment_edit_confirm.rs  datetime_picker.rs  delete_confirm.rs  field_edit_confirm.rs  field_multiselect.rs  field_select.rs  hide.rs  keybindings.rs  mod.rs  sub_view.rs  template_preview.rs  transition.rs
src/tui/views/: attachments.rs  comments.rs  custom.rs  default.rs  incident.rs  mod.rs  postmortem.rs  review.rs
